--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -310,8 +310,8 @@ linters:
       # Disable analyzers by name.
       # Run `GL_DEBUG=govet golangci-lint run --enable=govet` to see default, all available analyzers, and enabled analyzers.
       # Default: []
-      disable: []
-#        - fieldalignment # too strict
+      disable:
+        - fieldalignment # too strict
       # Settings per analyzer.
       settings:
         shadow:
